2008-05-23  Hans Breuer  <hans@breuer.org>

	* gtk/gtkprintoperation.c : check surface status after ceating a pdf.
	Avoids crashing when the target can not be written, bug #537685

	* gdk/win32/gdkdisplay-win32.c : runtime linking of ProcessIdToSessionId

	* gtk/gtkfilesystem.c : variadic macros are not supported with c89 and
	it was not needed here anyway.

2008-06-13 Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkentry.c (gtk_entry_draw_frame): Fix frame size allocation.
	Patch by Jan Arne Peterson

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	Bug 537985 – gtk_init_with_args() doesn't open a display after
	gtk_parse_args()

	* gtk/gtkmain.c (gtk_init_with_args): Open the default display
	even when gtk_parse_args() has already been called.
	Patch by Mathias Hasselmann

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	Bug 524222 – GtkToolbar with mix of buttons with and without 
	icons looks "bad"

	* gtk/gtktoolbutton.c (gtk_tool_button_construct_contents):
	Improve appearance of "both vertical" mode toolbuttons.
	Patch by Peter Johanson

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	Bug 519092 – Add accessibility support to GtkVolumeButton

	* gtk/gtkvolumebutton.c: Set accessibility descriptions.
	Patch by Jonh Wendell

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	Bug 517706 – Connecting GtkButton with "use-stock" == FALSE to a
	GtkAction has problems
	Patch by Peter Johanson

	* gtk/gtkaction.c (connect_proxy): Set the image of a button
	proxy to the "icon-name" property.

	(gtk_action_set_short_label):  If the "image" property is set 
	on the button proxy, also tries to set the "label" property on 
	the GtkButton.

2008-06-12  Michael Natterer  <mitch@imendio.com>

	* gtk/gtkmain.c
	* gtk/gtktrayicon-x11.c: don't #include <libintl.h>, it's pulled
	in via "gtkintl.h" from <glib/gi18n-lib.h>.

2008-06-12  Matthias Clasen  <mclasen@redhat.com>

	RH bug 248245 and 449379: cups client printing from gnome
	applications fail
