@@ -1,3 +1,12 @@
+2008-06-13  Michael Natterer  <mitch@imendio.com>
+
+	* gtk/gtkuimanager.c (start_element_handler): silently skip
+	unknown attributes instead of bailing out with an error in order
+	to be compatible with possible future attribute names.
+
+	This is related to the discussion in bug #516425 but actually
+	needed for any kind of XML format extension.
+
 2008-05-23  Hans Breuer  <hans@breuer.org>
 
 	* gtk/gtkprintoperation.c : check surface status after ceating a pdf.
